[package]
name = "r4"
version = "0.0.1"
authors = ["Adrian Danis <adriandanis88@gmail.com>"]
license = "MIT"

[features]
disable_float = []

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0.0"
#multiboot = "0.2.0"
multiboot = {git = "https://github.com/AdrianDanis/rust-multiboot"}
x86 = "0.6.0"
